Fix popup winodw jump issue
Fix #59

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -1,6 +1,6 @@
 html,
 body {
-  min-height: 300px;
+  min-height: 600px;
   padding: 0;
   margin: 0;
   user-select: none;
